objects/BMCRF_FacilityQueueMapping__c.object
<CustomObject>
    <description>Facility and Queue Mapping considering location and building.</description>
    <fields>
        <fullName>BMCRF_Building__c</fullName>
        <label>BMCRF_Building</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Location__c</fullName>
        <description>Contains office location of customer without comma separated value.</description>
        <label>BMCRF_Location</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCRF_Queue__c</fullName>
        <description>Contains queue value for the given facility (Name) , location and building</description>
        <label>BMCRF_Queue</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BMCRF_FacilityQueueMapping</label>
    <nameField>
        <label>BMCRF_FacilityQueueMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BMCRF_FacilityQueueMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>